src/Saga/Parser/ParserHM.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ./src/Saga/Parser/ParserHM.y
-----------------------------------------------------------------------------


rule 81 is unused
rule 82 is unused

terminal op is unused
terminal in is unused
terminal with is unused
terminal alias is unused
terminal kind is unused
terminal forall is unused
terminal exists is unused
terminal proof is unused
terminal infer is unused
terminal protocol is unused
terminal interface is unused
terminal module is unused
terminal import is unused
terminal ';' is unused
terminal newline is unused
terminal eof is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseSagaScript -> script                   (0)
	%start_parseSagaExpr -> expr                       (1)
	%start_parseSagaType -> typeExpr                   (2)
	%start_parseSagaKind -> kindExpr                   (3)
	%start_parseSagaDec -> dec                         (4)
	identifier -> id                                   (5)
	pairs ->                                           (6)
	pairs -> identifier ':' expr ',' pairs             (7)
	pairs -> identifier ':' expr                       (8)
	record -> '{' pairs '}'                            (9)
	listElements ->                                    (10)
	listElements -> expr                               (11)
	listElements -> expr ',' listElements              (12)
	list -> '[' listElements ']'                       (13)
	tupleElems -> ',' expr                             (14)
	tupleElems -> ',' expr tupleElems                  (15)
	tuple -> '(' expr tupleElems ')'                   (16)
	params ->                                          (17)
	params -> params identifier                        (18)
	args ->                                            (19)
	args -> args atom                                  (20)
	fnApplication -> atom args '!'                     (21)
	controlFlow -> if expr then expr else expr         (22)
	patListElems -> identifier                         (23)
	patListElems -> identifier ',' patListElems        (24)
	patTupleElems -> ',' identifier                    (25)
	patTupleElems -> ',' identifier patTupleElems      (26)
	patRecordKeys ->                                   (27)
	patRecordKeys -> identifier                        (28)
	patRecordKeys -> identifier ',' patRecordKeys      (29)
	patRest ->                                         (30)
	patRest -> '|' identifier                          (31)
	patData -> identifier ':'                          (32)
	patData -> patData identifier                      (33)
	pattern -> identifier                              (34)
	pattern -> term                                    (35)
	pattern -> patData                                 (36)
	pattern -> '(' identifier patTupleElems ')'        (37)
	pattern -> '[' ']'                                 (38)
	pattern -> '[' patListElems patRest ']'            (39)
	pattern -> '{' patRecordKeys patRest '}'           (40)
	pattern -> '(' pattern ')'                         (41)
	term -> number                                     (42)
	term -> string                                     (43)
	term -> boolean                                    (44)
	atom -> identifier                                 (45)
	atom -> term                                       (46)
	atom -> tuple                                      (47)
	atom -> list                                       (48)
	atom -> record                                     (49)
	atom -> '{' block '}'                              (50)
	atom -> '(' expr ')'                               (51)
	cases -> '|' pattern '->' expr                     (52)
	cases -> cases '|' pattern '->' expr               (53)
	matchExpr -> match expr cases                      (54)
	binding -> identifier '=' expr                     (55)
	bindings -> binding                                (56)
	bindings -> bindings ',' binding                   (57)
	expr -> controlFlow                                (58)
	expr -> matchExpr                                  (59)
	expr -> fnApplication                              (60)
	expr -> '\\' params '->' expr                      (61)
	expr -> atom                                       (62)
	expr -> '.' atom                                   (63)
	expr -> expr '.' identifier                        (64)
	expr -> expr '+' expr                              (65)
	expr -> expr '-' expr                              (66)
	expr -> expr '*' expr                              (67)
	expr -> expr '/' expr                              (68)
	expr -> expr '^' expr                              (69)
	expr -> expr '||' expr                             (70)
	expr -> expr '&&' expr                             (71)
	expr -> expr '==' expr                             (72)
	expr -> expr '!=' expr                             (73)
	expr -> expr '<' expr                              (74)
	expr -> expr '>' expr                              (75)
	expr -> expr '<=' expr                             (76)
	expr -> expr '>=' expr                             (77)
	expr -> expr '|>' expr                             (78)
	expr -> expr '<|' expr                             (79)
	expr -> expr '++' expr                             (80)
	patterns -> pattern ','                            (81)
	patterns -> patterns pattern                       (82)
	backcall -> identifier '<-' expr                   (83)
	statement -> fnApplication                         (84)
	statement -> letdec                                (85)
	statement -> backcall                              (86)
	stmts -> statement                                 (87)
	stmts -> stmts statement                           (88)
	returnStmt -> return expr                          (89)
	block -> returnStmt                                (90)
	block -> stmts returnStmt                          (91)
	tpairs ->                                          (92)
	tpairs -> identifier ':' typeExpr ',' tpairs       (93)
	tpairs -> identifier ':' typeExpr                  (94)
	trecord -> '{' tpairs '}'                          (95)
	ttupleElems -> ',' typeExpr                        (96)
	ttupleElems -> ',' typeExpr ttupleElems            (97)
	ttuple -> '(' typeExpr ttupleElems ')'             (98)
	type -> number                                     (99)
	type -> boolean                                    (100)
	type -> string                                     (101)
	type -> ttuple                                     (102)
	type -> trecord                                    (103)
	typeAtom -> type                                   (104)
	typeAtom -> identifier                             (105)
	typeAtom -> '(' typeExpr ')'                       (106)
	typeArgs ->                                        (107)
	typeArgs -> typeArgs typeAtom                      (108)
	tbinding -> identifier '=' typeExpr                (109)
	tbinding -> identifier implements typeExpr         (110)
	tbinding -> identifier '|->' typeExpr              (111)
	tbinding -> identifier '|' typeExpr                (112)
	tbindings -> tbinding                              (113)
	tbindings -> tbindings ',' tbinding                (114)
	tagged -> identifier ':' typeExpr                  (115)
	union -> '|' typeExpr                              (116)
	union -> union '|' typeExpr                        (117)
	typeExpr -> typeAtom                               (118)
	typeExpr -> tagged                                 (119)
	typeExpr -> union                                  (120)
	typeExpr -> typeExpr '->' typeExpr                 (121)
	typeExpr -> '\\' params '=>' typeExpr              (122)
	typeExpr -> typeAtom typeArgs '!'                  (123)
	typeAnnotation ->                                  (124)
	typeAnnotation -> ':' typeExpr                     (125)
	typeAnnotation -> ':' typeExpr where tbindings     (126)
	typeAnnotation -> ':' instance identifier ':' typeExpr   (127)
	kindExpr -> kindExpr '->' kindExpr                 (128)
	kindExpr -> '(' kindExpr ')'                       (129)
	kindExpr -> identifier                             (130)
	kindAnnotation ->                                  (131)
	kindAnnotation -> '::' kindExpr                    (132)
	dataExpr -> identifier ':' typeExpr                (133)
	dataExprs -> dataExpr                              (134)
	dataExprs -> dataExprs '|' dataExpr                (135)
	letdec -> let identifier typeAnnotation kindAnnotation '=' expr   (136)
	dec -> letdec                                      (137)
	dec -> let identifier typeAnnotation kindAnnotation '=' expr where bindings   (138)
	dec -> data identifier kindAnnotation '=' dataExprs   (139)
	dec -> data identifier kindAnnotation '=' dataExprs where tbindings   (140)
	dec -> ty identifier kindAnnotation '=' typeExpr   (141)
	dec -> ty identifier kindAnnotation '=' typeExpr where tbindings   (142)
	declarations -> dec                                (143)
	declarations -> declarations dec                   (144)
	script -> declarations                             (145)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	id             { L.RangedToken (T.Id _) _ }
	number         { L.RangedToken (T.Number _) _ }
	string         { L.RangedToken (T.String _) _ }
	boolean        { L.RangedToken (T.Boolean _) _ }
	'!'            { L.RangedToken (T.Operator "!") _ }
	'+'            { L.RangedToken (T.Operator "+") _ }
	'-'            { L.RangedToken (T.Operator "-") _ }
	'*'            { L.RangedToken (T.Operator "*") _ }
	'/'            { L.RangedToken (T.Operator "/") _ }
	'^'            { L.RangedToken (T.Operator "^") _ }
	'++'           { L.RangedToken (T.Operator "++") _ }
	'=='           { L.RangedToken (T.Operator "==") _ }
	'!='           { L.RangedToken (T.Operator "!=") _ }
	'<'            { L.RangedToken (T.Operator "<") _ }
	'<='           { L.RangedToken (T.Operator "<=") _ }
	'>'            { L.RangedToken (T.Operator ">") _ }
	'>='           { L.RangedToken (T.Operator ">=") _ }
	'||'           { L.RangedToken (T.Operator "||") _ }
	'&&'           { L.RangedToken (T.Operator "&&") _ }
	'|>'           { L.RangedToken (T.Operator "|>") _ }
	'<|'           { L.RangedToken (T.Operator "<|") _ }
	op             { L.RangedToken (T.Operator _) _ }
	let            { L.RangedToken T.Let _ }
	in             { L.RangedToken T.In _ }
	where          { L.RangedToken T.Where _ }
	with           { L.RangedToken T.With _ }
	if             { L.RangedToken T.If _ }
	then           { L.RangedToken T.Then _ }
	else           { L.RangedToken T.Else _ }
	match          { L.RangedToken T.Match _ }
	return         { L.RangedToken T.Return _ }
	data           { L.RangedToken T.Data _ }
	ty             { L.RangedToken T.Type _ }
	alias          { L.RangedToken T.Alias _ }
	kind           { L.RangedToken T.Kind _ }
	forall         { L.RangedToken T.Forall _ }
	exists         { L.RangedToken T.Exists _ }
	proof          { L.RangedToken T.Proof _ }
	infer          { L.RangedToken T.Infer _ }
	protocol       { L.RangedToken T.Protocol _ }
	interface      { L.RangedToken T.Interface _ }
	instance       { L.RangedToken T.Instance _ }
	implements     { L.RangedToken T.Implements _ }
	module         { L.RangedToken T.Module _ }
	import         { L.RangedToken T.Import _ }
	'('            { L.RangedToken T.LParen _ }
	')'            { L.RangedToken T.RParen _ }
	'['            { L.RangedToken T.LBrack _ }
	']'            { L.RangedToken T.RBrack _ }
	'{'            { L.RangedToken T.LCurly _ }
	'}'            { L.RangedToken T.RCurly _ }
	':'            { L.RangedToken T.Colon _ }
	';'            { L.RangedToken T.SemiColon _ }
	','            { L.RangedToken T.Comma _ }
	'->'           { L.RangedToken T.Arrow _ }
	'<-'           { L.RangedToken T.BackArrow _ }
	'=>'           { L.RangedToken T.FatArrow _ }
	'|->'          { L.RangedToken T.PipeArrow _ }
	'='            { L.RangedToken T.Equals _ }
	'|'            { L.RangedToken T.Pipe _ }
	'.'            { L.RangedToken T.Dot _ }
	'::'           { L.RangedToken T.Section _ }
	'\\'           { L.RangedToken T.BackSlash _ }
	newline        { L.RangedToken T.Newline _ }
	eof            { L.RangedToken T.EOF _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseSagaScript rule  0
	%start_parseSagaExpr rule  1
	%start_parseSagaType rule  2
	%start_parseSagaKind rule  3
	%start_parseSagaDec rule  4
	identifier      rule  5
	pairs           rules 6, 7, 8
	record          rule  9
	listElements    rules 10, 11, 12
	list            rule  13
	tupleElems      rules 14, 15
	tuple           rule  16
	params          rules 17, 18
	args            rules 19, 20
	fnApplication   rule  21
	controlFlow     rule  22
	patListElems    rules 23, 24
	patTupleElems   rules 25, 26
	patRecordKeys   rules 27, 28, 29
	patRest         rules 30, 31
	patData         rules 32, 33
	pattern         rules 34, 35, 36, 37, 38, 39, 40, 41
	term            rules 42, 43, 44
	atom            rules 45, 46, 47, 48, 49, 50, 51
	cases           rules 52, 53
	matchExpr       rule  54
	binding         rule  55
	bindings        rules 56, 57
	expr            rules 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80
	patterns        rules 81, 82
	backcall        rule  83
	statement       rules 84, 85, 86
	stmts           rules 87, 88
	returnStmt      rule  89
	block           rules 90, 91
	tpairs          rules 92, 93, 94
	trecord         rule  95
	ttupleElems     rules 96, 97
	ttuple          rule  98
	type            rules 99, 100, 101, 102, 103
	typeAtom        rules 104, 105, 106
	typeArgs        rules 107, 108
	tbinding        rules 109, 110, 111, 112
	tbindings       rules 113, 114
	tagged          rule  115
	union           rules 116, 117
	typeExpr        rules 118, 119, 120, 121, 122, 123
	typeAnnotation  rules 124, 125, 126, 127
	kindExpr        rules 128, 129, 130
	kindAnnotation  rules 131, 132
	dataExpr        rule  133
	dataExprs       rules 134, 135
	letdec          rule  136
	dec             rules 137, 138, 139, 140, 141, 142
	declarations    rules 143, 144
	script          rule  145

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseSagaScript -> . script                  (rule 0)

	let            shift, and enter state 9
	data           shift, and enter state 10
	ty             shift, and enter state 11

	letdec         goto state 7
	dec            goto state 50
	declarations   goto state 51
	script         goto state 52

State 1

	%start_parseSagaExpr -> . expr                      (rule 1)

	id             shift, and enter state 6
	number         shift, and enter state 40
	string         shift, and enter state 41
	boolean        shift, and enter state 42
	if             shift, and enter state 43
	match          shift, and enter state 44
	'('            shift, and enter state 45
	'['            shift, and enter state 46
	'{'            shift, and enter state 47
	'.'            shift, and enter state 48
	'\\'           shift, and enter state 49

	identifier     goto state 30
	record         goto state 31
	list           goto state 32
	tuple          goto state 33
	fnApplication  goto state 34
	controlFlow    goto state 35
	term           goto state 36
	atom           goto state 37
	matchExpr      goto state 38
	expr           goto state 39

State 2

	%start_parseSagaType -> . typeExpr                  (rule 2)

	id             shift, and enter state 6
	number         shift, and enter state 23
	string         shift, and enter state 24
	boolean        shift, and enter state 25
	'('            shift, and enter state 26
	'{'            shift, and enter state 27
	'|'            shift, and enter state 28
	'\\'           shift, and enter state 29

	identifier     goto state 15
	trecord        goto state 16
	ttuple         goto state 17
	type           goto state 18
	typeAtom       goto state 19
	tagged         goto state 20
	union          goto state 21
	typeExpr       goto state 22

State 3

	%start_parseSagaKind -> . kindExpr                  (rule 3)

	id             shift, and enter state 6
	'('            shift, and enter state 14

	identifier     goto state 12
	kindExpr       goto state 13

State 4

	%start_parseSagaDec -> . dec                        (rule 4)

	let            shift, and enter state 9
	data           shift, and enter state 10
	ty             shift, and enter state 11

	letdec         goto state 7
	dec            goto state 8

State 5

	identifier -> . id                                  (rule 5)

	id             shift, and enter state 6


State 6

	identifier -> id .                                  (rule 5)

	id             reduce using rule 5
	number         reduce using rule 5
	string         reduce using rule 5
	boolean        reduce using rule 5
	'!'            reduce using rule 5
	'+'            reduce using rule 5
	'-'            reduce using rule 5
	'*'            reduce using rule 5
	'/'            reduce using rule 5
	'^'            reduce using rule 5
	'++'           reduce using rule 5
	'=='           reduce using rule 5
	'!='           reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'||'           reduce using rule 5
	'&&'           reduce using rule 5
	'|>'           reduce using rule 5
	'<|'           reduce using rule 5
	let            reduce using rule 5
	where          reduce using rule 5
	then           reduce using rule 5
	else           reduce using rule 5
	return         reduce using rule 5
	data           reduce using rule 5
	ty             reduce using rule 5
	implements     reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'['            reduce using rule 5
	']'            reduce using rule 5
	'{'            reduce using rule 5
	'}'            reduce using rule 5
	':'            reduce using rule 5
	','            reduce using rule 5
	'->'           reduce using rule 5
	'<-'           reduce using rule 5
	'=>'           reduce using rule 5
	'|->'          reduce using rule 5
	'='            reduce using rule 5
	'|'            reduce using rule 5
	'.'            reduce using rule 5
	'::'           reduce using rule 5
	%eof           reduce using rule 5


State 7

	dec -> letdec .                                     (rule 137)

	let            reduce using rule 137
	data           reduce using rule 137
	ty             reduce using rule 137
	%eof           reduce using rule 137


State 8

	%start_parseSagaDec -> dec .                        (rule 4)

	%eof           accept


State 9

	letdec -> let . identifier typeAnnotation kindAnnotation '=' expr    (rule 136)
	dec -> let . identifier typeAnnotation kindAnnotation '=' expr where bindings    (rule 138)

	id             shift, and enter state 6

	identifier     goto state 104

State 10

	dec -> data . identifier kindAnnotation '=' dataExprs    (rule 139)
	dec -> data . identifier kindAnnotation '=' dataExprs where tbindings    (rule 140)

	id             shift, and enter state 6

	identifier     goto state 103

State 11

	dec -> ty . identifier kindAnnotation '=' typeExpr    (rule 141)
	dec -> ty . identifier kindAnnotation '=' typeExpr where tbindings    (rule 142)

	id             shift, and enter state 6

	identifier     goto state 102

State 12

	kindExpr -> identifier .                            (rule 130)

	')'            reduce using rule 130
	'->'           reduce using rule 130
	'='            reduce using rule 130
	%eof           reduce using rule 130


State 13

	%start_parseSagaKind -> kindExpr .                  (rule 3)
	kindExpr -> kindExpr . '->' kindExpr                (rule 128)

	'->'           shift, and enter state 101
	%eof           accept


State 14

	kindExpr -> '(' . kindExpr ')'                      (rule 129)

	id             shift, and enter state 6
	'('            shift, and enter state 14

	identifier     goto state 12
	kindExpr       goto state 100

State 15

	typeAtom -> identifier .                            (rule 105)
	tagged -> identifier . ':' typeExpr                 (rule 115)

	id             reduce using rule 105
	number         reduce using rule 105
	string         reduce using rule 105
	boolean        reduce using rule 105
	'!'            reduce using rule 105
	let            reduce using rule 105
	where          reduce using rule 105
	data           reduce using rule 105
	ty             reduce using rule 105
	'('            reduce using rule 105
	')'            reduce using rule 105
	'{'            reduce using rule 105
	'}'            reduce using rule 105
	':'            shift, and enter state 99
	','            reduce using rule 105
	'->'           reduce using rule 105
	'='            reduce using rule 105
	'|'            reduce using rule 105
	'::'           reduce using rule 105
	%eof           reduce using rule 105


State 16

	type -> trecord .                                   (rule 103)

	id             reduce using rule 103
	number         reduce using rule 103
	string         reduce using rule 103
	boolean        reduce using rule 103
	'!'            reduce using rule 103
	let            reduce using rule 103
	where          reduce using rule 103
	data           reduce using rule 103
	ty             reduce using rule 103
	'('            reduce using rule 103
	')'            reduce using rule 103
	'{'            reduce using rule 103
	'}'            reduce using rule 103
	','            reduce using rule 103
	'->'           reduce using rule 103
	'='            reduce using rule 103
	'|'            reduce using rule 103
	'::'           reduce using rule 103
	%eof           reduce using rule 103


State 17

	type -> ttuple .                                    (rule 102)

	id             reduce using rule 102
	number         reduce using rule 102
	string         reduce using rule 102
	boolean        reduce using rule 102
	'!'            reduce using rule 102
	let            reduce using rule 102
	where          reduce using rule 102
	data           reduce using rule 102
	ty             reduce using rule 102
	'('            reduce using rule 102
	')'            reduce using rule 102
	'{'            reduce using rule 102
	'}'            reduce using rule 102
	','            reduce using rule 102
	'->'           reduce using rule 102
	'='            reduce using rule 102
	'|'            reduce using rule 102
	'::'           reduce using rule 102
	%eof           reduce using rule 102


State 18

	typeAtom -> type .                                  (rule 104)

	id             reduce using rule 104
	number         reduce using rule 104
	string         reduce using rule 104
	boolean        reduce using rule 104
	'!'            reduce using rule 104
	let            reduce using rule 104
	where          reduce using rule 104
	data           reduce using rule 104
	ty             reduce using rule 104
	'('            reduce using rule 104
	')'            reduce using rule 104
	'{'            reduce using rule 104
	'}'            reduce using rule 104
	','            reduce using rule 104
	'->'           reduce using rule 104
	'='            reduce using rule 104
	'|'            reduce using rule 104
	'::'           reduce using rule 104
	%eof           reduce using rule 104


State 19

	typeExpr -> typeAtom .                              (rule 118)
	typeExpr -> typeAtom . typeArgs '!'                 (rule 123)

	id             reduce using rule 107
	number         reduce using rule 107
	string         reduce using rule 107
	boolean        reduce using rule 107
	'!'            reduce using rule 107
	let            reduce using rule 118
	where          reduce using rule 118
	data           reduce using rule 118
	ty             reduce using rule 118
	'('            reduce using rule 107
	')'            reduce using rule 118
	'{'            reduce using rule 107
	'}'            reduce using rule 118
	','            reduce using rule 118
	'->'           reduce using rule 118
	'='            reduce using rule 118
	'|'            reduce using rule 118
	'::'           reduce using rule 118
	%eof           reduce using rule 118

	typeArgs       goto state 98

State 20

	typeExpr -> tagged .                                (rule 119)

	let            reduce using rule 119
	where          reduce using rule 119
	data           reduce using rule 119
	ty             reduce using rule 119
	')'            reduce using rule 119
	'}'            reduce using rule 119
	','            reduce using rule 119
	'->'           reduce using rule 119
	'='            reduce using rule 119
	'|'            reduce using rule 119
	'::'           reduce using rule 119
	%eof           reduce using rule 119


State 21

	union -> union . '|' typeExpr                       (rule 117)
	typeExpr -> union .                                 (rule 120)

	let            reduce using rule 120
	where          reduce using rule 120
	data           reduce using rule 120
	ty             reduce using rule 120
	')'            reduce using rule 120
	'}'            reduce using rule 120
	','            reduce using rule 120
	'->'           reduce using rule 120
	'='            reduce using rule 120
	'|'            shift, and enter state 97
	'::'           reduce using rule 120
	%eof           reduce using rule 120


State 22

	%start_parseSagaType -> typeExpr .                  (rule 2)
	typeExpr -> typeExpr . '->' typeExpr                (rule 121)

	'->'           shift, and enter state 96
	%eof           accept


State 23

	type -> number .                                    (rule 99)

	id             reduce using rule 99
	number         reduce using rule 99
	string         reduce using rule 99
	boolean        reduce using rule 99
	'!'            reduce using rule 99
	let            reduce using rule 99
	where          reduce using rule 99
	data           reduce using rule 99
	ty             reduce using rule 99
	'('            reduce using rule 99
	')'            reduce using rule 99
	'{'            reduce using rule 99
	'}'            reduce using rule 99
	','            reduce using rule 99
	'->'           reduce using rule 99
	'='            reduce using rule 99
	'|'            reduce using rule 99
	'::'           reduce using rule 99
	%eof           reduce using rule 99


State 24

	type -> string .                                    (rule 101)

	id             reduce using rule 101
	number         reduce using rule 101
	string         reduce using rule 101
	boolean        reduce using rule 101
	'!'            reduce using rule 101
	let            reduce using rule 101
	where          reduce using rule 101
	data           reduce using rule 101
	ty             reduce using rule 101
	'('            reduce using rule 101
	')'            reduce using rule 101
	'{'            reduce using rule 101
	'}'            reduce using rule 101
	','            reduce using rule 101
	'->'           reduce using rule 101
	'='            reduce using rule 101
	'|'            reduce using rule 101
	'::'           reduce using rule 101
	%eof           reduce using rule 101


State 25

	type -> boolean .                                   (rule 100)

	id             reduce using rule 100
	number         reduce using rule 100
	string         reduce using rule 100
	boolean        reduce using rule 100
	'!'            reduce using rule 100
	let            reduce using rule 100
	where          reduce using rule 100
	data           reduce using rule 100
	ty             reduce using rule 100
	'('            reduce using rule 100
	')'            reduce using rule 100
	'{'            reduce using rule 100
	'}'            reduce using rule 100
	','            reduce using rule 100
	'->'           reduce using rule 100
	'='            reduce using rule 100
	'|'            reduce using rule 100
	'::'           reduce using rule 100
	%eof           reduce using rule 100


State 26

	ttuple -> '(' . typeExpr ttupleElems ')'            (rule 98)
	typeAtom -> '(' . typeExpr ')'                      (rule 106)

	id             shift, and enter state 6
	number         shift, and enter state 23
	string         shift, and enter state 24
	boolean        shift, and enter state 25
	'('            shift, and enter state 26
	'{'            shift, and enter state 27
	'|'            shift, and enter state 28
	'\\'           shift, and enter state 29

	identifier     goto state 15
	trecord        goto state 16
	ttuple         goto state 17
	type           goto state 18
	typeAtom       goto state 19
	tagged         goto state 20
	union          goto state 21
	typeExpr       goto state 95

State 27

	trecord -> '{' . tpairs '}'                         (rule 95)

	id             shift, and enter state 6
	'}'            reduce using rule 92

	identifier     goto state 93
	tpairs         goto state 94

State 28

	union -> '|' . typeExpr                             (rule 116)

	id             shift, and enter state 6
	number         shift, and enter state 23
	string         shift, and enter state 24
	boolean        shift, and enter state 25
	'('            shift, and enter state 26
	'{'            shift, and enter state 27
	'|'            shift, and enter state 28
	'\\'           shift, and enter state 29

	identifier     goto state 15
	trecord        goto state 16
	ttuple         goto state 17
	type           goto state 18
	typeAtom       goto state 19
	tagged         goto state 20
	union          goto state 21
	typeExpr       goto state 92

State 29

	typeExpr -> '\\' . params '=>' typeExpr             (rule 122)

	id             reduce using rule 17
	'=>'           reduce using rule 17

	params         goto state 91

State 30

	atom -> identifier .                                (rule 45)

	id             reduce using rule 45
	number         reduce using rule 45
	string         reduce using rule 45
	boolean        reduce using rule 45
	'!'            reduce using rule 45
	'+'            reduce using rule 45
	'-'            reduce using rule 45
	'*'            reduce using rule 45
	'/'            reduce using rule 45
	'^'            reduce using rule 45
	'++'           reduce using rule 45
	'=='           reduce using rule 45
	'!='           reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'||'           reduce using rule 45
	'&&'           reduce using rule 45
	'|>'           reduce using rule 45
	'<|'           reduce using rule 45
	let            reduce using rule 45
	where          reduce using rule 45
	then           reduce using rule 45
	else           reduce using rule 45
	return         reduce using rule 45
	data           reduce using rule 45
	ty             reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	'['            reduce using rule 45
	']'            reduce using rule 45
	'{'            reduce using rule 45
	'}'            reduce using rule 45
	','            reduce using rule 45
	'|'            reduce using rule 45
	'.'            reduce using rule 45
	%eof           reduce using rule 45


State 31

	atom -> record .                                    (rule 49)

	id             reduce using rule 49
	number         reduce using rule 49
	string         reduce using rule 49
	boolean        reduce using rule 49
	'!'            reduce using rule 49
	'+'            reduce using rule 49
	'-'            reduce using rule 49
	'*'            reduce using rule 49
	'/'            reduce using rule 49
	'^'            reduce using rule 49
	'++'           reduce using rule 49
	'=='           reduce using rule 49
	'!='           reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49
	'&&'           reduce using rule 49
	'|>'           reduce using rule 49
	'<|'           reduce using rule 49
	let            reduce using rule 49
	where          reduce using rule 49
	then           reduce using rule 49
	else           reduce using rule 49
	return         reduce using rule 49
	data           reduce using rule 49
	ty             reduce using rule 49
	'('            reduce using rule 49
	')'            reduce using rule 49
	'['            reduce using rule 49
	']'            reduce using rule 49
	'{'            reduce using rule 49
	'}'            reduce using rule 49
	','            reduce using rule 49
	'|'            reduce using rule 49
	'.'            reduce using rule 49
	%eof           reduce using rule 49


State 32

	atom -> list .                                      (rule 48)

	id             reduce using rule 48
	number         reduce using rule 48
	string         reduce using rule 48
	boolean        reduce using rule 48
	'!'            reduce using rule 48
	'+'            reduce using rule 48
	'-'            reduce using rule 48
	'*'            reduce using rule 48
	'/'            reduce using rule 48
	'^'            reduce using rule 48
	'++'           reduce using rule 48
	'=='           reduce using rule 48
	'!='           reduce using rule 48
	'<'            reduce using rule 48
	'<='           reduce using rule 48
	'>'            reduce using rule 48
	'>='           reduce using rule 48
	'||'           reduce using rule 48
	'&&'           reduce using rule 48
	'|>'           reduce using rule 48
	'<|'           reduce using rule 48
	let            reduce using rule 48
	where          reduce using rule 48
	then           reduce using rule 48
	else           reduce using rule 48
	return         reduce using rule 48
	data           reduce using rule 48
	ty             reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	'['            reduce using rule 48
	']'            reduce using rule 48
	'{'            reduce using rule 48
	'}'            reduce using rule 48
	','            reduce using rule 48
	'|'            reduce using rule 48
	'.'            reduce using rule 48
	%eof           reduce using rule 48


State 33

	atom -> tuple .                                     (rule 47)

	id             reduce using rule 47
	number         reduce using rule 47
	string         reduce using rule 47
	boolean        reduce using rule 47
	'!'            reduce using rule 47
	'+'            reduce using rule 47
	'-'            reduce using rule 47
	'*'            reduce using rule 47
	'/'            reduce using rule 47
	'^'            reduce using rule 47
	'++'           reduce using rule 47
	'=='           reduce using rule 47
	'!='           reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'||'           reduce using rule 47
	'&&'           reduce using rule 47
	'|>'           reduce using rule 47
	'<|'           reduce using rule 47
	let            reduce using rule 47
	where          reduce using rule 47
	then           reduce using rule 47
	else           reduce using rule 47
	return         reduce using rule 47
	data           reduce using rule 47
	ty             reduce using rule 47
	'('            reduce using rule 47
	')'            reduce using rule 47
	'['            reduce using rule 47
	']'            reduce using rule 47
	'{'            reduce using rule 47
	'}'            reduce using rule 47
	','            reduce using rule 47
	'|'            reduce using rule 47
	'.'            reduce using rule 47
	%eof           reduce using rule 47


State 34

	expr -> fnApplication .                             (rule 60)

	id             reduce using rule 60
	number         reduce using rule 60
	string         reduce using rule 60
	boolean        reduce using rule 60
	'+'            reduce using rule 60
	'-'            reduce using rule 60
	'*'            reduce using rule 60
	'/'            reduce using rule 60
	'^'            reduce using rule 60
	'++'           reduce using rule 60
	'=='           reduce using rule 60
	'!='           reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	'||'           reduce using rule 60
	'&&'           reduce using rule 60
	'|>'           reduce using rule 60
	'<|'           reduce using rule 60
	let            reduce using rule 60
	where          reduce using rule 60
	then           reduce using rule 60
	else           reduce using rule 60
	return         reduce using rule 60
	data           reduce using rule 60
	ty             reduce using rule 60
	'('            reduce using rule 60
	')'            reduce using rule 60
	'['            reduce using rule 60
	']'            reduce using rule 60
	'{'            reduce using rule 60
	'}'            reduce using rule 60
	','            reduce using rule 60
	'|'            reduce using rule 60
	'.'            reduce using rule 60
	%eof           reduce using rule 60


State 35

	expr -> controlFlow .                               (rule 58)

	id             reduce using rule 58
	number         reduce using rule 58
	string         reduce using rule 58
	boolean        reduce using rule 58
	'+'            reduce using rule 58
	'-'            reduce using rule 58
	'*'            reduce using rule 58
	'/'            reduce using rule 58
	'^'            reduce using rule 58
	'++'           reduce using rule 58
	'=='           reduce using rule 58
	'!='           reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	'||'           reduce using rule 58
	'&&'           reduce using rule 58
	'|>'           reduce using rule 58
	'<|'           reduce using rule 58
	let            reduce using rule 58
	where          reduce using rule 58
	then           reduce using rule 58
	else           reduce using rule 58
	return         reduce using rule 58
	data           reduce using rule 58
	ty             reduce using rule 58
	'('            reduce using rule 58
	')'            reduce using rule 58
	'['            reduce using rule 58
	']'            reduce using rule 58
	'{'            reduce using rule 58
	'}'            reduce using rule 58
	','            reduce using rule 58
	'|'            reduce using rule 58
	'.'            reduce using rule 58
	%eof           reduce using rule 58


State 36

	atom -> term .                                      (rule 46)
